--- a/less/variables.less
+++ b/less/variables.less
@@ -89,3 +89,7 @@
 
 @zindexWindowFullScreen: 4000;
 @zindexWindowFullScreenBanner: 4100;
+
+:root {
+  --navbar-height: @navbarHeight;
+}
